--- a/09_advance_one/ApiRequest.html
+++ b/09_advance_one/ApiRequest.html
@@ -8,10 +8,13 @@
   <body style="background-color: #212121">
 
     <!-- Read mdn xhr docs  -->
-    0 UNSENT Client has been created. open() not called yet. 1 OPENED open() has
-    been called. 2 HEADERS_RECEIVED send() has been called, and headers and
-    status are available. 3 LOADING Downloading; responseText holds partial
-    data. 4 DONE The operation is complete.
+    0 UNSENT Client has been created. open() not called yet. 
+    1 OPENED open() has been called. 
+    2 HEADERS_RECEIVED send() has been called, and headers and status are available. 
+    3 LOADING Downloading; responseText holds partial
+    data.
+    4 DONE The operation is complete.
+    
   </body>
   <script>
     const requestUrl = "https://api.github.com/users/hiteshchoudhary";
